internal/translator/testdata/lb-diff-strategy/input.yaml
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: lb-strategy
  namespace: default
spec:
  virtualhost:
    fqdn: strategy.bar.com
  routes:
    - match: /
      services:
        - name: s1-strategy
          port: 80
          strategy: Random
        - name: s2-strategy
          port: 80
          strategy: WeightedLeastRequest
