internal/translator/testdata/lb-diff-strategy/output.yaml
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: lb-strategy
  namespace: default
spec:
  routes:
  - conditions:
    - prefix: /
    loadBalancerPolicy:
      strategy: Random
    services:
    - name: s1-strategy
      port: 80
    - name: s2-strategy
      port: 80
  virtualhost:
    fqdn: strategy.bar.com
